tests/block-storageclass-full-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
  labels:
    app: kubia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
      annotations:
        backup.velero.io/backup-volumes: html
    spec:
      containers:
      - image: luksa/fortune
        name: html-generator
        volumeMounts:
        - name: html
          mountPath: /var/htdocs
      - image: nginx:alpine
        name: web-server
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: kubia-sc-claim
---
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  type: ClusterIP
  selector:
    app: kubia
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"

spec:
  ingressClassName: traefik
  rules:
    - host: "kubia.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubia
                port:
                  number: 8080
  tls:
  - hosts:
    - "kubia.${SECRET_DOMAIN}"
